--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>9M Holdings</title>
+    <meta name="description" content="9M Holdings - Building tomorrow through innovative ventures and strategic partnerships in technology and design." />
+    <title>9M Holdings - Building Tomorrow</title>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" /></noscript>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
@@ -33,11 +36,11 @@
     </section>
     <section class="spotlight">
       <div class="spotlight-images">
-        <div class="img"><img src="/baasil.jpeg" alt="" /></div>
-        <div class="img"><img src="/sri.jpeg" alt="" /></div>
-        <div class="img"><img src="/haadi.jpeg" alt="" /></div>
-        <div class="img"><img src="/sammy.jpeg" alt="" /></div>
-        <div class="img"><img src="/ali.jpg" alt="" /></div>
+        <div class="img"><img src="/baasil.jpeg" alt="Team member Baasil" loading="lazy" /></div>
+        <div class="img"><img src="/sri.jpeg" alt="Team member Sri" loading="lazy" /></div>
+        <div class="img"><img src="/haadi.jpeg" alt="Team member Haadi" loading="lazy" /></div>
+        <div class="img"><img src="/sammy.jpeg" alt="Team member Sammy" loading="lazy" /></div>
+        <div class="img"><img src="/ali.jpg" alt="Team member Ali" loading="lazy" /></div>
       </div>
       <div class="spotlight-cover-img">
         <div class="swiss-cross-container">
