Fix line in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="img"><img src="/baasil.jpeg" alt="Team member Baasil" loading="lazy" /></div>
         <div class="img"><img src="/sri.jpeg" alt="Team member Sri" loading="lazy" /></div>
         <div class="img"><img src="/haadi.jpeg" alt="Team member Haadi" loading="lazy" /></div>
-        <div class="img"><img src="/sammy2.jpeg" alt="Team member Sammy" loading="lazy" /></div>
+        <div class="img"><img src="/sammy2.jpg" alt="Team member Sammy" loading="lazy" /></div>
         <div class="img"><img src="/ali.jpg" alt="Team member Ali" loading="lazy" /></div>
       </div>
       <div class="spotlight-cover-img">
